--- a/PA1_template.html
+++ b/PA1_template.html
@@ -104,7 +104,11 @@ head(activityData)</code></pre>
 <div id="calculate-and-report-the-mean-and-median-total-number-of-steps-taken-per-day" class="section level3">
 <h3>3. Calculate and report the mean and median total number of steps taken per day</h3>
 <pre class="r"><code>stepsByDayMean &lt;- mean(stepsByDay$steps)
-stepsByDayMedian &lt;- median(stepsByDay$steps)</code></pre>
+stepsByDayMean</code></pre>
+<pre><code>## [1] 10766.19</code></pre>
+<pre class="r"><code>stepsByDayMedian &lt;- median(stepsByDay$steps)
+stepsByDayMedian</code></pre>
+<pre><code>## [1] 10765</code></pre>
 <ul>
 <li>Mean: 10766.19</li>
 <li>Median: 10765</li>
