--- a/PA1_template.html
+++ b/PA1_template.html
@@ -133,8 +133,11 @@ plot(row.names(time_series), time_series, type = &quot;l&quot;, xlab = &quot;5-m
 max_act_int &lt;- activityData$interval[max_act_num]
 sprintf(&quot;%02d:%02d&quot;, floor(max_act_int/60), max_act_int %% 60)</code></pre>
 <pre><code>## [1] &quot;08:35&quot;</code></pre>
+<pre class="r"><code>max_act_int</code></pre>
+<pre><code>## [1] 515</code></pre>
 <ul>
 <li>Most Steps at: 08:35</li>
+<li>Maximum number of steps: 515</li>
 </ul>
 </div>
 <div id="inputing-missing-values" class="section level2">
